@@ -14,19 +14,21 @@ defined('_JEXEC') or die;
  *
  * @package     Joomla.Administrator
  * @subpackage  mod_logged
+ * @since       1.5
  */
 abstract class ModLoggedHelper
 {
 	/**
 	 * Get a list of logged users.
 	 *
-	 * @param   JObject	The module parameters.
-	 * @return  mixed	An array of articles, or false on error.
+	 * @param   JRegistry  $params  The module parameters.
+	 *
+	 * @return  mixed  An array of users, or false on error.
 	 */
 	public static function getList($params)
 	{
-		$db = JFactory::getDbo();
-		$user = JFactory::getUser();
+		$db    = JFactory::getDbo();
+		$user  = JFactory::getUser();
 		$query = $db->getQuery(true);
 
 		$query->select('s.time, s.client_id, u.id, u.name, u.username');
@@ -41,7 +43,8 @@ abstract class ModLoggedHelper
 		}
 		catch (RuntimeException $e)
 		{
-			JError::raiseError(500, $e->getMessage());
+			throw new RuntimeException($e->getMessage());
+
 			return false;
 		}
 
@@ -51,9 +54,10 @@ abstract class ModLoggedHelper
 
 			if ($user->authorise('core.manage', 'com_users'))
 			{
-				$results[$k]->editLink = JRoute::_('index.php?option=com_users&task=user.edit&id='.$result->id);
-				$results[$k]->logoutLink = JRoute::_('index.php?option=com_login&task=logout&uid='.$result->id .'&'. JSession::getFormToken() .'=1');
+				$results[$k]->editLink   = JRoute::_('index.php?option=com_users&task=user.edit&id=' . $result->id);
+				$results[$k]->logoutLink = JRoute::_('index.php?option=com_login&task=logout&uid=' . $result->id . '&' . JSession::getFormToken() . '=1');
 			}
+
 			if ($params->get('name', 1) == 0)
 			{
 				$results[$k]->name = $results[$k]->username;
@@ -66,8 +70,9 @@ abstract class ModLoggedHelper
 	/**
 	 * Get the alternate title for the module
 	 *
-	 * @param   JObject	The module parameters.
-	 * @return  string	The alternate title for the module.
+	 * @param   JRegistry  $params  The module parameters.
+	 *
+	 * @return  string    The alternate title for the module.
 	 */
 	public static function getTitle($params)
 	{
