@@ -15,33 +15,34 @@ JHtml::_('bootstrap.tooltip');
 	<?php foreach ($users as $user) : ?>
 		<div class="row-fluid">
 			<div class="span9">
-				<?php if ($user->client_id == 0) :?>
-					<a class="hasTooltip" title="<?php echo JText::_('MOD_LOGGED_LOGOUT');?>" href="<?php echo $user->logoutLink;?>" class="btn btn-danger btn-mini">
-						<i class="icon-remove icon-white" title="<?php echo JText::_('JLOGOUT');?>"></i>
+				<?php if ($user->client_id == 0) : ?>
+					<a class="hasTooltip" title="<?php echo JText::_('MOD_LOGGED_LOGOUT'); ?>" href="<?php echo $user->logoutLink; ?>" class="btn btn-danger btn-mini">
+						<i class="icon-remove icon-white" title="<?php echo JText::_('JLOGOUT'); ?>"></i>
 					</a>
 				<?php endif; ?>
 
 				<strong class="row-title">
-					<?php if (isset($user->editLink)) :?>
-						<a href="<?php echo $user->editLink; ?>" class="hasTooltip" title="<?php echo JText::_('JGRID_HEADING_ID');?> : <?php echo $user->id; ?>">
-							<?php echo $user->name;?></a>
-					<?php else :
-						echo $user->name;
-					endif; ?>
+					<?php if (isset($user->editLink)) : ?>
+						<a href="<?php echo $user->editLink; ?>" class="hasTooltip" title="<?php echo JText::_('JGRID_HEADING_ID'); ?> : <?php echo $user->id; ?>">
+							<?php echo $user->name;?>
+						</a>
+					<?php else : ?>
+						<?php echo $user->name; ?>
+					<?php endif; ?>
 				</strong>
 
 				<small class="small hasTooltip" title="<?php echo JText::_('JCLIENT'); ?>">
-				<?php
-					if ($user->client_id)
-					{
-						echo JText::_('JADMINISTRATION');
-					} else {
-						echo JText::_('JSITE');
-					}?>
+					<?php if ($user->client_id) : ?>
+						<?php echo JText::_('JADMINISTRATION'); ?>
+					<?php else : ?>
+						<?php echo JText::_('JSITE'); ?>
+					<?php endif;?>
 				</small>
 			</div>
 			<div class="span3">
-				<span class="small hasTooltip" title="<?php echo JText::_('MOD_LOGGED_LAST_ACTIVITY');?>"><i class="icon-calendar"></i> <?php echo JHtml::_('date', $user->time, 'Y-m-d'); ?></span>
+				<span class="small hasTooltip" title="<?php echo JText::_('MOD_LOGGED_LAST_ACTIVITY'); ?>">
+					<i class="icon-calendar"></i> <?php echo JHtml::_('date', $user->time, 'Y-m-d'); ?>
+				</span>
 			</div>
 		</div>
 	<?php endforeach; ?>
